pkg/lang/testdata/ub/stack-values/invalid/locals-self-cycle.ub
locals: { a: local.a.field }
